--- a/written/eLifeRevision/eLife2020.bib
+++ b/written/eLifeRevision/eLife2020.bib
@@ -1125,3 +1125,32 @@
   year={2011},
   publisher={Royal Society of Chemistry}
 }	
+
+@article{blei2014build,
+  title={Build, compute, critique, repeat: Data analysis with latent variable models},
+  author={Blei, David M},
+  year={2014},
+  publisher={Annual Reviews}
+}
+
+@article{liepe2014framework,
+  title={A framework for parameter estimation and model selection from experimental data in systems biology using approximate Bayesian computation},
+  author={Liepe, Juliane and Kirk, Paul and Filippi, Sarah and Toni, Tina and Barnes, Chris P and Stumpf, Michael PH},
+  journal={Nature protocols},
+  volume={9},
+  number={2},
+  pages={439--456},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@article{raue2009structural,
+  title={Structural and practical identifiability analysis of partially observed dynamical models by exploiting the profile likelihood},
+  author={Raue, Andreas and Kreutz, Clemens and Maiwald, Thomas and Bachmann, Julie and Schilling, Marcel and Klingm{\"u}ller, Ursula and Timmer, Jens},
+  journal={Bioinformatics},
+  volume={25},
+  number={15},
+  pages={1923--1929},
+  year={2009},
+  publisher={Oxford University Press}
+}
