--- a/written/eLifeRevision/Bittner_eLife2020.tex
+++ b/written/eLifeRevision/Bittner_eLife2020.tex
@@ -80,10 +80,10 @@ Seminal examples of this gold standard (which often adopt approaches from statis
 Unfortunately, as circuit models include more biological realism, theory via analytical derivation becomes intractable.  
 %This creates an unfavorable tradeoff.  On the one hand, one may tractably analyze systems of equations with unrealistic assumptions (for example symmetry or gaussianity), mathematically formalizing how parameters affect computation in a too-simple model.  
 %On the other hand, one may choose a more biologically accurate, scientifically relevant model at the cost of \emph{ad hoc} approaches to analysis (such as simply examining simulated activity), potentially resulting in bad inference of parameters and thus erroneous scientific predictions or conclusions.
-Alternatively, Bayesian inference can be run to obtain model parameters likely to produce some observations, and local sensitivity analyses can be performed at individual parameter choices of the obtained posterior.
+Alternatively, statistical inference can be run to obtain model parameters likely to produce some model output, and local sensitivity analyses can be performed at inferred parameter values.
 %Exact Bayesian inference is rarely tractable, so Markov chain Monte Carlo (MCMC) and variation inference (VI) techniques are used in practice.
 Since most neural circuit models stipulate a noisy system of differential equations that can only be sampled or realized through forward simulation, they lack the explicit likelihood central to the probabilistic modeling toolkit.
-Therefore, the most popular approaches to the inverse problem have been likelihood-free methods namely approximate Bayesian computation (ABC) \cite{liepe2014framework}, in which a set of model parameters analogous to a posterior is obtained via simulation and rejection.
+Therefore, the most popular approaches to the inverse problem have been likelihood-free methods such as approximate Bayesian computation (ABC) \cite{liepe2014framework}, in which a set of reasonable parameters estimates is obtained via simulation and rejection.
 
 % now transition to deep ML...
 %Of course, this same tradeoff has been confronted in many scientific fields characterized by the need to do inference in complex models.
@@ -97,14 +97,15 @@ These works have used deep neural networks to expand the expressivity and accura
 
 % What's wrong with existing methodology:
 Existing approaches to the inverse problem in theoretical neuroscience fall short in three key ways. 
-First, principled Bayesian approaches using MCMC or VAEs do not work absent a tractable likelihood function, which theoretical models of neural computation generally lack.
-The parameter sets obtained from likelihood-free ABC lack a formalized link to Bayesian inference (except for the theoretical 0-distance scenario), lack parameter probabilities, and only confer sensitivity analyses of an alternative likelihood to the simulator-defined likelihood of ABC \cite{raue2009structural}.
+First, theoretical models of neural computation aim to reflect a complex biological reality, and as a result, such models lack tractable likelihoods.
+Thus, standard approaches from statistical inference are unavailable.
+The parameter sets obtained from likelihood-free ABC lack a formalized link to Bayesian inference (except in the unrealistic $0$-distance scenario), lack parameter probabilities, and only confer sensitivity analyses of an alternative likelihood to the simulator-defined likelihood of ABC \cite{raue2009structural}.
 Second is the undesirable trade-off between the flexibility and tractability of the approximated posterior distribution.
-While sampling-based approaches like ABC and MCMC can produce flexible posterior approximations, they must be run continually for increasing samples.
-While VAE approaches result in tractable posterior sampling and sensitivity measurements post-optimization, existing approaches have relied on simplified classes of distributions, which restrict the flexibility of the posterior approximation.
-And third, the posterior predictive distribution of all Bayesian approaches to the inverse problem are left unconstrained.  
+While sampling-based approaches like ABC and Markov chain Monte Carlo (MCMC) can produce flexible posterior approximations, they must be run continually for increasing samples.
+While VAE approaches can result in tractable posterior sampling and sensitivity measurements post-optimization, existing approaches have relied on simplified classes of distributions, which restrict the flexibility of the posterior approximation.
+And third, you can never make assumptions of what inferred model parameters will predict.
 This is well understood when considering Box's loop and the role of posterior predictive checks in the development and critique of scientific models \cite{gelman2013philosophy, blei2014build}.
-However, unconstrained posterior predictive distributions introduce a conceptual degree of freedom to the inverse problem that may be unnecessary and undesirable given the scientific motivation.
+Uncertainty about the properties of inferred model predictions introduce a conceptual degree of freedom to the inverse problem that may be unnecessary and undesirable given the scientific motivation.
 
 %However, these inference tools have not significantly influenced the study of theoretical neuroscience models, for at least three reasons.
 %First, at a practical level, the nonlinearities and dynamics of many theoretical models are such that conventional inference tools typically produce a narrow set of insights into these models.
